<resources>
    <string name="app_name">Movizo</string>
    <string name="home">Home</string>
    <string name="upcoming">Upcoming</string>
    <string name="kids">Kids</string>
    <string name="icon">Icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="movie_name">Movie Name</string>
    <string name="recentlyAdded">Recently Added</string>
    <string name="popular_tv_shows">Popular Tv Shows</string>
    <string name="livetvandradio"><![CDATA[Live TV & Radio]]></string>
    <string name="bangla_movies">Bangla Movies</string>
    <string name="korean_movies">Korean Movies</string>
    <string name="english_movies">English Movies</string>
    <string name="bangla_drama">Bangla Drama</string>
    <string name="indian_movies">Indian Movies</string>
    <string name="chinese_movies">Chinese Movies</string>
    <string name="turkish_movies">Turkish Movies</string>
    <string name="tv_shows">TV Shows</string>
</resources>